--- a/src/app/components/locations/location/location.component.html
+++ b/src/app/components/locations/location/location.component.html
@@ -3,7 +3,7 @@
     <mat-card class="location-card" appearance="outlined"
       (click)="onLocationClick(location)">
         <mat-card-header>
-          <mat-card-title>{{upperFirstLetter(location.name)}}</mat-card-title>
+          <mat-card-title>{{ location.name | upperFirstLetter }}</mat-card-title>
         </mat-card-header>
         <img class="img" mat-card-image src="{{location.img}}" alt="Image location">
     </mat-card>
