--- a/src/app/components/pokemon/poke-list/poke-list.component.html
+++ b/src/app/components/pokemon/poke-list/poke-list.component.html
@@ -26,7 +26,7 @@
           (click)="pokeModal(pokemon)" @fadeInDownBig>
           <mat-card-header>
             <mat-card-title-group>
-              <mat-card-title class="pokemon-name"> {{ upperFirstLetter(pokemon.name) }} </mat-card-title>
+              <mat-card-title class="pokemon-name"> {{ pokemon.name | upperFirstLetter }} </mat-card-title>
               <mat-card-subtitle>
                 @for (poke of pokemon.types; track poke) {
                   <div>
@@ -54,7 +54,7 @@
           (click)="pokeModal(pokemon)" @fadeInDownBig>
           <mat-card-header>
             <mat-card-title-group>
-              <mat-card-title class="pokemon-name"> {{ upperFirstLetter(pokemon.name) }} </mat-card-title>
+              <mat-card-title class="pokemon-name"> {{ pokemon.name | upperFirstLetter }} </mat-card-title>
               <mat-card-subtitle>
                 @for (poke of pokemon.types; track poke) {
                   <div>
