--- a/src/app/components/ability/ability-list/ability-list.component.html
+++ b/src/app/components/ability/ability-list/ability-list.component.html
@@ -21,7 +21,7 @@
       <!-- Name Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name">Name</th>
-        <td mat-cell *matCellDef="let item"> {{ upperFirstLetter(item.name) }} </td>
+        <td mat-cell *matCellDef="let item"> {{ item.name | upperFirstLetter }} </td>
       </ng-container>
 
       <!-- Expand Column-->
