--- a/src/app/components/locations/region-details/region-details.component.html
+++ b/src/app/components/locations/region-details/region-details.component.html
@@ -3,7 +3,7 @@
         <mat-card class="menu">
             <mat-card-header>
                 <mat-card-title>
-                    {{upperFirstLetter(location.name)}}
+                    {{ location.name | upperFirstLetter }}
                 </mat-card-title>
             </mat-card-header>
                 <img class="img" mat-card-image src="{{location.img}}" alt="city image">
@@ -12,21 +12,21 @@
                     <mat-card-title>Pokedexes</mat-card-title>
                     <mat-divider></mat-divider>
                     @for(pokedex of location.pokedexes; track pokedex) {
-                        <p>{{upperFirstLetter(pokedex.name)}}</p>
+                        <p>{{ pokedex.name | upperFirstLetter }}</p>
                     }
                 </div>
                 <div class="section">
                     <mat-card-title>Version</mat-card-title>
                     <mat-divider></mat-divider>
                     @for(ver of location.version_groups; track ver) {
-                        <p>{{upperFirstLetter(ver.name)}}</p>
+                        <p>{{ ver.name | upperFirstLetter }}</p>
                     }
                 </div>
                 <div class="section">
                     <mat-card-title>Main Generation</mat-card-title>
                     <mat-divider></mat-divider>
                     @if(location.main_generation) {
-                        <p>{{upperFirstLetter(location.main_generation.name)}}</p>
+                        <p>{{ location.main_generation.name | upperFirstLetter }}</p>
                     }
                 </div>
                 <div class="section">
@@ -46,7 +46,7 @@
             <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
                 <ng-container matColumnDef="name" >
                     <mat-header-cell mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-                    <mat-cell mat-cell *matCellDef="let element"> {{upperFirstLetter(element.name)}} </mat-cell>
+                    <mat-cell mat-cell *matCellDef="let element"> {{ element.name | upperFirstLetter }} </mat-cell>
                 </ng-container>
             
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
