--- a/src/app/components/natures/nature-list/nature-list.component.html
+++ b/src/app/components/natures/nature-list/nature-list.component.html
@@ -14,18 +14,18 @@
     @for(nature of natureDetails; track nature) {
         <mat-card>
             <mat-card-header>
-                <mat-card-title class="title"> {{ upperFirstLetter(nature.name) }} </mat-card-title>
+                <mat-card-title class="title"> {{ nature.name | upperFirstLetter }} </mat-card-title>
             </mat-card-header>
             <div class="line"></div>
             <mat-card-content>
                 @if(nature.increased_stat != null) {
                     
                     <div class="stats">
-                        <p> {{upperFirstLetter(nature.increased_stat.name)}}</p>
+                        <p> {{ nature.increased_stat.name | upperFirstLetter }} </p>
                         <img class="stats-image" src="../../../assets/up_stats64.png" alt="up stats pixel art" />
                     </div>
                     <div class="stats">
-                        <p> {{upperFirstLetter(nature.decreased_stat.name)}}</p>
+                        <p> {{ nature.decreased_stat.name | upperFirstLetter }} </p>
                         <img class="stats-image" src="../../../assets/down_stats64.png" alt="down stats pixel art" />
                     </div>
                     
