--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -65,7 +65,7 @@
 
 @if (!hideHeader) {
   <header class="docs-primary-header component-page-header">
-    <h2>{{ upperFirstLetter(componentName) }}</h2>
+    <h2>{{ componentName | upperFirstLetter }}</h2>
   </header>
 }
 
