--- a/src/app/components/pokemon/pokemon-details/pokemon-details.component.css
+++ b/src/app/components/pokemon/pokemon-details/pokemon-details.component.css
@@ -190,6 +190,49 @@ p {
   animation: card-pulse 1.2s ease-in-out infinite;
 }
 
+.flip-container {
+  perspective: 1000px;
+  width: 280px;
+  height: 330px;
+  margin: 0 auto;
+}
+
+.flipper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: 0.6s;
+  transform-style: preserve-3d;
+}
+
+.flip-container:hover .flipper {
+  transform: rotateY(180deg);
+}
+
+.front,
+.back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  backface-visibility: hidden;
+}
+
+.front {
+  z-index: 2;
+  transform: rotateY(0deg);
+}
+
+.back {
+  transform: rotateY(180deg);
+}
+
+.flip-img {
+  width: 16px;
+  height: 16px;
+  vertical-align: middle;
+}
+
 @keyframes card-pulse {
   0% {
     transform: scale(1);
